работа с рельефом, настройки камеры, дополненный exif

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,11 @@ pkg_check_modules(LIBAV REQUIRED IMPORTED_TARGET
     libavutil
 )
 
+FIND_PACKAGE(Gdal REQUIRED)
+FIND_PACKAGE(GeoInterface REQUIRED)
+
+INCLUDE_DIRECTORIES(${Gdal_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(${GeoInterface_INCLUDE_DIRS})
 
 add_executable(VEGAVideoServer
     helper.h
@@ -91,8 +96,10 @@ target_include_directories(${PROJECT_NAME} PUBLIC ${LIBEVENT_INCLUDE_DIR})
 target_include_directories(${PROJECT_NAME} PRIVATE ${LIBEXIV2_INCLUDE_DIR})
 
 
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${GeoInterface_LIBRARY_DIRS})
 target_link_libraries(${PROJECT_NAME} PUBLIC ${LIBEVENT_LIB})
 target_link_libraries(${PROJECT_NAME} PUBLIC PkgConfig::LIBAV)
 target_link_libraries(${PROJECT_NAME} PUBLIC ${LIBEXIV2_LIB})
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${Gdal_LIBRARY_DIRS})
 
 TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
