--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ FIND_PATH(MAVLINK_INCLUDE_DIR
     PATHS
     ${PROJECT_SOURCE_DIR}/c_library_v2)
 
+find_package(Boost REQUIRED)
 find_package(Event REQUIRED)
 find_package(Exiv REQUIRED)
 
@@ -74,6 +75,7 @@ pkg_check_modules(LIBAV REQUIRED IMPORTED_TARGET
 FIND_PACKAGE(Gdal REQUIRED)
 FIND_PACKAGE(GeoInterface REQUIRED)
 
+INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${Gdal_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${GeoInterface_INCLUDE_DIRS})
 
@@ -96,6 +98,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC ${LIBEVENT_INCLUDE_DIR})
 target_include_directories(${PROJECT_NAME} PRIVATE ${LIBEXIV2_INCLUDE_DIR})
 
 
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${Boost_LIBRARY_DIRS})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${GeoInterface_LIBRARY_DIRS})
 target_link_libraries(${PROJECT_NAME} PUBLIC ${LIBEVENT_LIB})
 target_link_libraries(${PROJECT_NAME} PUBLIC PkgConfig::LIBAV)
