fmt, spdlog, запись телеметрии

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ ENDIF()
 
 
 # ASAN CONFIGURE
-#SET(ASAN_ADDRESS True CACHE BOOL "Compile address sanitizer")
+SET(ASAN_ADDRESS True CACHE BOOL "Compile address sanitizer")
 #SET(ASAN_THREADS False CACHE BOOL "Compile thread sanitizer")
 #SET(ASAN_UB True CACHE BOOL "Compile undefined behaviour sanitizer")
 
@@ -55,6 +55,7 @@ FIND_PACKAGE(Event REQUIRED)
 FIND_PACKAGE(Exiv REQUIRED)
 FIND_PACKAGE(Gdal REQUIRED)
 FIND_PACKAGE(GeoInterface REQUIRED)
+FIND_PACKAGE(Spdlog)
 
 IF (NOT MAVLINK_INCLUDE_DIR)
     message("Failed build mavlink")
@@ -68,12 +69,14 @@ IF (${USE_NVMPI})
 	#    add_definitions(-DUSE_NVMPI)
 ENDIF()
 
+INCLUDE_DIRECTORIES(${Spdlog_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${Gdal_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${FFMPEG_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${GeoInterface_INCLUDE_DIRS})
 
 SET(HEADERS_LIST
+    log.h
     helper.h
     Decoder.h
     EncoderJPEG.h
@@ -115,6 +118,7 @@ TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${LIBEVENT_LIB})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${AV_LIBS})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${LIBEXIV2_LIB})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${Gdal_LIBRARY_DIRS})
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${Fmt_LIBRARY_DIRS})
 TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 install(TARGETS ${PROJECT_NAME} DESTINATION bin)
