доработки CMake, исправлены некоторые утечки

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,12 +13,15 @@ ENDIF()
 
 # ASAN CONFIGURE
 SET(ASAN_ADDRESS True CACHE BOOL "Compile address sanitizer")
-#SET(ASAN_THREADS False CACHE BOOL "Compile thread sanitizer")
-#SET(ASAN_UB True CACHE BOOL "Compile undefined behaviour sanitizer")
+SET(ASAN_THREADS False CACHE BOOL "Compile thread sanitizer")
+SET(ASAN_UB True CACHE BOOL "Compile undefined behaviour sanitizer")
 
 IF (${ASAN_ADDRESS})
-    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address -fsanitize=leak -g")
-    SET(CMAKE_CXX_LINKER_FLAGS_DEBUG "${CMAKE_CXX_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address -fsanitize=leak")
+    #SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address -fsanitize=leak -g")
+    #SET(CMAKE_CXX_LINKER_FLAGS_DEBUG "${CMAKE_CXX_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address -fsanitize=leak")
+
+    set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address -g")
+    set (CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
 ENDIF ()
 IF(${ASAN_THREADS})
     SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fsanitize=thread -g")
@@ -33,7 +36,7 @@ SET(CMAKE_CXX_STANDARD 17)
 SET(CMAKE_CXX_STANDARD_REQUIRED ON)
 SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pthread")
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lz")
+# SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lz")
 SET(THREADS_PREFER_PTHREAD_FLAG ON)
 LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
@@ -72,7 +75,7 @@ ENDIF()
 INCLUDE_DIRECTORIES(${Spdlog_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${Gdal_INCLUDE_DIRS})
-INCLUDE_DIRECTORIES(${FFMPEG_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(${FFMPEG_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${GeoInterface_INCLUDE_DIRS})
 
 SET(HEADERS_LIST
@@ -108,15 +111,15 @@ SET(SOURCES_LIST
 
 ADD_EXECUTABLE(VEGAVideoServer ${HEADERS_LIST} ${SOURCES_LIST})
 
-TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${LIBEVENT_INCLUDE_DIR})
-TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${LIBEXIV2_INCLUDE_DIR})
+TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${LIBEVENT_INCLUDE_DIRS})
+TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${LIBEXIV2_INCLUDE_DIRS})
 
 
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${Boost_LIBRARY_DIRS})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${GeoInterface_LIBRARY_DIRS})
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${LIBEVENT_LIB})
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${LIBEXIV2_LIBRARY_DIRS})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${AV_LIBS})
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${LIBEXIV2_LIB})
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${LIBEVENT_LIBRARY_DIRS})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${Gdal_LIBRARY_DIRS})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${Fmt_LIBRARY_DIRS})
 TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
